--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
-html,body {
+html{
+  margin: 0%;
+  height: 100%;
+}
+body {
     margin: 0px;
     font-family: 'Roboto', sans-serif;
     background-color: skyblue;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    min-height: 100%;
   }
   
   .main-container {
@@ -12,6 +17,18 @@ html,body {
     flex-direction: column;
     align-items: center;
   }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    background-color: #1f2937;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 20px;
+    padding-top: 10px;
+    font-weight: bold;
+
+}
+
   
   .top {
     display: flex;
@@ -83,7 +100,10 @@ html,body {
     justify-content: center;
     gap:30px
   }
-  
+  #wrapper{
+    flex:1;
+    /* padding: 20px; */
+  }
   .footer {
     text-align: center;
     background-color: #1f2937;
