--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@ body {
     /* justify-content: space-between; */
     min-height: 100%;
   }
-  
+  .first-container{
+    display: flex;
+    justify-content: center;
+    margin: 0%;
+  }
   .main-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-self: center;
+    /* align-items: center; */
+    width: fit-content;
+    gap: 0%;
   }
   .header {
     display: flex;
@@ -74,7 +81,6 @@ body {
     border: 1rem solid rgb(253, 193, 82);
     border-radius: 10px;
     margin-bottom: 8px;
-    margin-top: 40px;
   }
   .color-sky-blue {
     background-color: skyblue;
@@ -136,4 +142,12 @@ body {
     box-sizing: border-box;
     border-radius: 3px;
   }
-  
+  #status1,#status2{
+    margin-top: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: large;
+  }
+  .selected{
+    font-size: larger;
+  }
