Add display winner/ Style

--- a/style.css
+++ b/style.css
@@ -67,11 +67,6 @@ body {
     padding-left: 200px;
   }
   
-  .flex-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
   
   .grid-container {
     display: grid;
@@ -79,7 +74,8 @@ body {
     width: 30rem;
     height: 30rem;
     border: 1rem solid rgb(253, 193, 82);
-    border-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     margin-bottom: 8px;
   }
   .color-sky-blue {
@@ -148,6 +144,18 @@ body {
     font-weight: bold;
     font-size: large;
   }
+  #status2{
+    margin-bottom: 0.5rem;
+  }
   .selected{
     font-size: larger;
+  }
+  #display-bar{
+    color: #ffffff;
+    display: flex;
+    font-size: large;
+    background-color: #1f2937;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    margin-top: 2rem;
   }
