--- a/style.css
+++ b/style.css
@@ -9,22 +9,24 @@ dialog {
 body {
     margin: 0px;
     font-family: 'Roboto', sans-serif;
-    background-color: skyblue;
+    /* background-color: skyblue; */
+    background-image: url('Tic Tac Toe.jpg');
+
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     min-height: 100%;
   }
   .first-container{
+    margin-top: 10%;
+    margin-bottom: 10%;
     display: flex;
     justify-content: center;
-    margin: 0%;
+    
   }
   .main-container {
     display: flex;
     flex-direction: column;
     justify-self: center;
-    /* align-items: center; */
     width: fit-content;
     gap: 0%;
   }
@@ -54,7 +56,7 @@ body {
   
   .header-logo {
     font-size: 24px;
-    color: rgb(253, 193, 82);
+    color: #02BBAB;
     font-weight: bold;
     padding-top: 10px;
   }
@@ -62,7 +64,7 @@ body {
   a {
     list-style-type: none;
     text-decoration: none;
-    color: rgb(253, 193, 82);
+    color: #02BBAB;
   }
   
   ul {
@@ -74,30 +76,30 @@ body {
   
   .grid-container {
     display: grid;
-    background-color: rgb(253, 193, 82);
+    background-color: #EBD4BA;
     width: 30rem;
     height: 30rem;
-    border: 1rem solid rgb(253, 193, 82);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border: 1rem solid #EBD4BA;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     margin-bottom: 8px;
   }
-  .color-sky-blue {
-    background-color: skyblue;
+  .dark-blue {
+    background-color: #11213A;
     border-color: black;
-    border: solid 1px rgb(65, 21, 21);
+    border: solid 1px #EBD4BA;
     box-sizing: border-box;
-    border-radius: 3px;
+    border-radius: 7px;
   
   }
   
   .color-dark-blue {
     border-color: black;
-    border: solid 1px rgb(65, 21, 21);
+    border: solid 1px #EBD4BA;
     background-color: #1f2937;
     color: aqua;
     box-sizing: border-box;
-    border-radius: 3px;
+    border-radius: 7px;
     
   }
   
@@ -120,9 +122,9 @@ body {
     padding-left: 40px;
   }
   button{
-    background-color: rgb(253, 193, 82);
+    background-color: #02BBAB;
     color: #1f2937;
-    border-color: rgb(253, 193, 82);
+    border-color: #02BBAB;
     border-radius: 10px;
     border-style: solid;
     width: 100px;
