--- a/style.css
+++ b/style.css
@@ -1,170 +1,195 @@
-html{
+html {
   margin: 0%;
   height: 100%;
 }
+
+input {
+  background-color: #02BBAB;
+  border-color: #02BBAB;
+  margin-bottom: 7px;
+  border-radius: 8px;
+}
+
 dialog {
+  color: #EBD4BA;
   border-radius: 20px;
+  background-color: #11213A;
+  border-color: #11213A;
   /* display: inline-block; */
 }
-body {
-    margin: 0px;
-    font-family: 'Roboto', sans-serif;
-    /* background-color: skyblue; */
-    background-image: url('Tic Tac Toe.jpg');
 
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-  }
-  .first-container{
-    margin-top: 10%;
-    margin-bottom: 10%;
-    display: flex;
-    justify-content: center;
-    
-  }
-  .main-container {
-    display: flex;
-    flex-direction: column;
-    justify-self: center;
-    width: fit-content;
-    gap: 0%;
-  }
-  .header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #1f2937;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-bottom: 20px;
-    padding-top: 10px;
-    font-weight: bold;
+body {
+  margin: 0px;
+  font-family: 'Roboto', sans-serif;
+  /* background-color: skyblue; */
+  background-image: url('Tic Tac Toe.jpg');
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.first-container {
+  margin-top: 10%;
+  margin-bottom: 10%;
+  display: flex;
+  justify-content: center;
 
 }
 
-  
-  .top {
-    display: flex;
-    justify-content:space-between;
-    background-color: #1f2937;
-    padding-left: 300px;
-    padding-right: 300px;
-    padding-bottom: 20px;
-    padding-top: 10px;
-  
-  }
-  
-  .header-logo {
-    font-size: 24px;
-    color: #02BBAB;
-    font-weight: bold;
-    padding-top: 10px;
-  }
-  
-  a {
-    list-style-type: none;
-    text-decoration: none;
-    color: #02BBAB;
-  }
-  
-  ul {
-    display: flex;
-    gap: 16px;
-    padding-left: 200px;
-  }
-  
-  
-  .grid-container {
-    display: grid;
-    background-color: #EBD4BA;
-    width: 30rem;
-    height: 30rem;
-    border: 1rem solid #EBD4BA;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    margin-bottom: 8px;
-  }
-  .dark-blue {
-    background-color: #11213A;
-    border-color: black;
-    border: solid 1px #EBD4BA;
-    box-sizing: border-box;
-    border-radius: 7px;
-  
-  }
-  
-  .color-dark-blue {
-    border-color: black;
-    border: solid 1px #EBD4BA;
-    background-color: #1f2937;
-    color: aqua;
-    box-sizing: border-box;
-    border-radius: 7px;
-    
-  }
-  
-  .buttons {
-    display: flex;
-    justify-content: center;
-    gap:30px
-  }
-  #wrapper{
-    flex:1;
-    /* padding: 20px; */
-  }
-  .footer {
-    text-align: center;
-    background-color: #1f2937;
-    color: white;
-    padding-top: 20px;
-    padding-right: 40px;
-    padding-bottom: 20px;
-    padding-left: 40px;
-  }
-  button{
-    background-color: #02BBAB;
-    color: #1f2937;
-    border-color: #02BBAB;
-    border-radius: 10px;
-    border-style: solid;
-    width: 100px;
-    height: 35px;
-    justify-self: center;
-    margin-bottom: 20px;
-  }
-  button:hover {
-    background-color: rgb(151, 114, 45);
-    border-color:rgb(151, 114, 45);
-  }
-  .color-white {
-    border-color: black;
-    border: solid 1px rgb(65, 21, 21);
-    background-color: #ffffff;
-    color: aqua;
-    box-sizing: border-box;
-    border-radius: 3px;
-  }
-  #status1,#status2{
-    margin-top: 20px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: large;
-  }
-  #status2{
-    margin-bottom: 0.5rem;
-  }
-  .selected{
-    font-size: larger;
-  }
-  #display-bar{
-    color: #ffffff;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: large;
-    background-color: #1f2937;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    margin-top: 2rem;
-  }
-  
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  width: fit-content;
+  gap: 0%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #1f2937;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  font-weight: bold;
+
+}
+
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  background-color: #1f2937;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+
+}
+
+.header-logo {
+  font-size: 24px;
+  color: #02BBAB;
+  font-weight: bold;
+  padding-top: 10px;
+}
+
+a {
+  list-style-type: none;
+  text-decoration: none;
+  color: #02BBAB;
+}
+
+ul {
+  display: flex;
+  gap: 16px;
+  padding-left: 200px;
+}
+
+
+.grid-container {
+  display: grid;
+  background-color: #EBD4BA;
+  width: 30rem;
+  height: 30rem;
+  border: 1rem solid #EBD4BA;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin-bottom: 8px;
+}
+
+.dark-blue {
+  background-color: #11213A;
+  border-color: black;
+  border: solid 1px #EBD4BA;
+  box-sizing: border-box;
+  border-radius: 7px;
+
+}
+
+.color-dark-blue {
+  border-color: black;
+  border: solid 1px #EBD4BA;
+  background-color: #1f2937;
+  color: aqua;
+  box-sizing: border-box;
+  border-radius: 7px;
+
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 30px
+}
+
+#wrapper {
+  flex: 1;
+  /* padding: 20px; */
+}
+
+.footer {
+  text-align: center;
+  background-color: #1f2937;
+  color: white;
+  padding-top: 20px;
+  padding-right: 40px;
+  padding-bottom: 20px;
+  padding-left: 40px;
+}
+
+button {
+  background-color: #02BBAB;
+  color: #1f2937;
+  border-color: #02BBAB;
+  border-radius: 10px;
+  border-style: solid;
+  width: 100px;
+  height: 35px;
+  justify-self: center;
+  margin-bottom: 20px;
+}
+
+button:hover {
+  background-color: rgb(151, 114, 45);
+  border-color: rgb(151, 114, 45);
+}
+
+.color-white {
+  border-color: black;
+  border: solid 1px rgb(65, 21, 21);
+  background-color: #ffffff;
+  color: aqua;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
+
+#status1,
+#status2 {
+  margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: large;
+}
+
+#status2 {
+  margin-bottom: 0.5rem;
+}
+
+.selected {
+  font-size: larger;
+}
+
+#display-bar {
+  color: #ffffff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: large;
+  background-color: #1f2937;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  margin-top: 2rem;
+}
